[gd_scene load_steps=6 format=3 uid="uid://c25l3kxm6g3wn"]

[ext_resource type="Script" path="res://scenes/GUI/hud/hud.gd" id="1_k5gjg"]
[ext_resource type="Texture2D" uid="uid://v7u01s3vf0ay" path="res://assets/sprites/weapons/1.png" id="2_ua7wc"]
[ext_resource type="PackedScene" uid="uid://ddwv0va7wls5j" path="res://scenes/GUI/hud/item_panel.tscn" id="3_v1w2q"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vkr40"]
bg_color = Color(1, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="AtlasTexture" id="AtlasTexture_r0u0p"]
atlas = ExtResource("2_ua7wc")
region = Rect2(0.338522, 117.651, 13.3188, 10.5148)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_k5gjg")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 80.0
grow_horizontal = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="EnemiesVBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/EnemiesVBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/EnemiesVBoxContainer/MarginContainer"]
layout_mode = 2
text = "Enemies: -1/-1"
horizontal_alignment = 1

[node name="EnemiesCountBar" type="ProgressBar" parent="MarginContainer/EnemiesVBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(500, 20)
layout_mode = 2
size_flags_horizontal = 0
value = 50.0
rounded = true
show_percentage = false

[node name="Label" type="Label" parent="MarginContainer/EnemiesVBoxContainer"]
layout_mode = 2
text = "Wave: -1"
horizontal_alignment = 1

[node name="StatusVBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/StatusVBoxContainer"]
layout_mode = 2

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/StatusVBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_vkr40")
value = 50.0
rounded = true
show_percentage = false

[node name="Label" type="Label" parent="MarginContainer/StatusVBoxContainer/MarginContainer"]
layout_mode = 2
text = "-1/-1"
horizontal_alignment = 1

[node name="GunMarginContainer" type="MarginContainer" parent="."]
anchors_preset = -1
anchor_left = 0.951
anchor_top = 0.945
anchor_right = 0.988
anchor_bottom = 0.985
offset_left = -0.200073
offset_top = -6.10352e-05
offset_right = 0.399902
offset_bottom = -6.10352e-05
grow_horizontal = 0
grow_vertical = 0

[node name="Panel" type="Panel" parent="GunMarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="GunMarginContainer/Panel"]
z_index = 2
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
texture = SubResource("AtlasTexture_r0u0p")

[node name="ItemsContainer" type="MarginContainer" parent="."]
anchors_preset = -1
anchor_top = 0.932
anchor_right = 0.743
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -11.6
offset_right = -9.60004
offset_bottom = -15.0
grow_horizontal = 0
grow_vertical = 0

[node name="ItemsHBoxContainer" type="HBoxContainer" parent="ItemsContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_constants/separation = 20

[node name="ItemPanel" parent="ItemsContainer/ItemsHBoxContainer" instance=ExtResource("3_v1w2q")]
visible = false
layout_mode = 2
